Tower of Hanoi/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_73\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi
-d
C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\tower.java
<---- end of javadoc command ---->
Loading source file C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\tower.java...
Constructing Javadoc information...
C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\tower.java:8: error: class Tower is public, should be declared in a file named Tower.java
public class Tower
       ^
C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\tower.java:10: error: cannot find symbol
    ArrayList<Disc> tower;
              ^
  symbol:   class Disc
  location: class Tower
C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\tower.java:55: error: cannot find symbol
    public boolean addDisc(Disc disc){
                           ^
  symbol:   class Disc
  location: class Tower
Standard Doclet version 1.8.0_73
Building tree for all the packages and classes...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\Tower.html...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\package-frame.html...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\package-summary.html...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\allclasses-frame.html...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\allclasses-noframe.html...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\index.html...
Generating C:\Users\Gary\Documents\GitHub\Tower-of-Hanoi\Tower of Hanoi\doc\stylesheet.css...
3 warnings
